updated image paths

--- a/scss/catering/catering.scss
+++ b/scss/catering/catering.scss
@@ -1,6 +1,6 @@
 .cateringHero {
   height: 400px;
-  background-image: url(./../../images/catering/catering-hero.jpeg);
+  background-image: url(./../images/catering/catering-hero.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
