--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "aromatic";
-  src: url(./../images/Aromatic/Aromatic.ttf);
+  src: url(./images/Aromatic/Aromatic.ttf);
 }
 
 @font-face {
   font-family: "bourton";
-  src: url(./../../images/Bourton/BourtonBase.ttf);
+  src: url(./../images/Bourton/BourtonBase.ttf);
 }
 
 .homeHero {
   height: 400px;
-  background-image: url(./../../images/home/home-hero.png);
+  background-image: url(./../images/home/home-hero.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -188,7 +188,7 @@
     width: 100%;
     width: 50%;
     float: left;
-    background-image: url(./../../images/home/join-our-team.jpeg);
+    background-image: url(./../images/home/join-our-team.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -224,7 +224,7 @@
         height: 100%;
         width: 100%;
         float: left;
-        background-image: url(./../../images/home/join-our-team.jpeg);
+        background-image: url(./../images/home/join-our-team.jpeg);
         border-radius: 25px 25px 0px 0px;
       }
     }
